# chuk-mcp-dem

./: ARCHITECTURE.md  Dockerfile  Makefile  README.md  ROADMAP.md  SPEC.md  fly.toml  mypy.ini  pyproject.toml
.github/workflows/: fly-deploy.yml  publish.yml  test.yml
examples/: anomaly_detection_demo.py  capabilities_demo.py  colchester_demo.py  feature_detection_demo.py  grand_canyon_profile_demo.py  landform_classification_demo.py  ml_terrain_analysis_demo.py  mount_rainier_demo.py  mountain_peaks_demo.py  source_comparison_demo.py  stonehenge_demo.py  temporal_change_demo.py  tool_runner.py  views_demo.py  viewshed_demo.py
src/chuk_mcp_dem/: __init__.py  async_server.py  constants.py  server.py
src/chuk_mcp_dem/core/: __init__.py  dem_manager.py  raster_io.py
src/chuk_mcp_dem/models/: __init__.py  responses.py
src/chuk_mcp_dem/tools/: __init__.py
src/chuk_mcp_dem/tools/analysis/: __init__.py  api.py
src/chuk_mcp_dem/tools/discovery/: __init__.py  api.py
src/chuk_mcp_dem/tools/download/: __init__.py  api.py
tests/: __init__.py  conftest.py  test_analysis_tools.py  test_constants.py  test_dem_manager.py  test_discovery_tools.py  test_download_tools.py  test_models.py  test_raster_io.py  test_server.py
