[project]
name = "chuk-mcp-dem"
version = "0.2.3"
description = "Digital Elevation Model Discovery, Retrieval & Terrain Analysis MCP Server"
authors = []
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=0.9.1",
    "chuk-mcp-server>=0.25.3",
    "python-dotenv>=1.1.1",
    "pydantic>=2.0.0",
    # Raster I/O (for COG reading & DEM processing)
    "rasterio>=1.3.0",
    "numpy>=1.24.0",
    # CRS handling
    "pyproj>=3.6.0",
    # Retry logic
    "tenacity>=8.2.0",
    # PNG output for previews
    "Pillow>=9.0.0",
    # Void filling & cubic interpolation
    "scipy>=1.10.0",
    # Profile chart & map views (ProfileContent, ProfilePoint, MapContent etc.)
    "chuk-view-schemas>=0.1.4",
    "chuk-artifacts>=0.11.1",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.3.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "bandit>=1.7.0",
    "pre-commit>=3.0.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "bandit>=1.7.0",
    "pre-commit>=3.0.0",
    "matplotlib>=3.7.0",
]

[project.scripts]
chuk-mcp-dem = "chuk_mcp_dem.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chuk_mcp_dem"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true
source = ["src/chuk_mcp_dem"]
omit = [
    "*/tests/*",
    "*/examples/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
